Add convenience method to define if a Person is guest (needed for SURFteams)

--- a/pom.xml
+++ b/pom.xml
@@ -1,124 +1,126 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.google.code</groupId>
-	<artifactId>opensocial-java-client</artifactId>
-	<version>1.6-SNAPSHOT-coin</version>
-	<packaging>jar</packaging>
-	<name>opensocial-java-client</name>
-	<description>opensocial-java-client</description>
-	<properties>
-		<application.distributionManagement.siteUrl>file:///var/opt/maven/sites/opensocial-java-client/${version}</application.distributionManagement.siteUrl>
-		<commons-codec.version>1.4</commons-codec.version>
-		<easymock.version>2.5.2</easymock.version>
-		<json-simle.version>1.1</json-simle.version>
-		<oauth.version>20090825</oauth.version>
-		<orgjson.version>20080701</orgjson.version>
-	</properties>
-	<scm>
-		<connection>https://svn.surfnet.nl/svn/coin-os/vendor/opensocial-java-client/trunk</connection>
-	</scm>
-	<distributionManagement>
-		<repository>
-			<id>coin-repo</id>
-			<name>coin-repo</name>
-			<url>http://bamboo-dev.coin.surfnetlabs.nl</url>
-		</repository>
-		<snapshotRepository>
-			<id>repo</id>
-			<name>Repository Name</name>
-			<url>http://bamboo-dev.coin.surfnetlabs.nl</url>
-		</snapshotRepository>
-	</distributionManagement>
-	<repositories>
-		<repository>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<id>coin-repo</id>
-			<name>COIN Repository</name>
-			<url>http://bamboo-dev.coin.surfnetlabs.nl</url>
-		</repository>
-		<repository>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<id>oauth-maven-repo</id>
-			<name>OAuth Maven repository</name>
-			<url>http://oauth.googlecode.com/svn/code/maven</url>
-			<layout>default</layout>
-		</repository>
-		<repository>
-			<id>maven2-repository.dev.java.net</id>
-			<name>Java.net Repository for Maven</name>
-			<url>http://download.java.net/maven/2</url>
-			<layout>default</layout>
-		</repository>
-	</repositories>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.google.code</groupId>
+  <artifactId>opensocial-java-client</artifactId>
+  <version>1.6.1-SNAPSHOT-coin</version>
+  <packaging>jar</packaging>
+  <name>opensocial-java-client</name>
+  <description>opensocial-java-client</description>
+  <properties>
+    <commons-codec.version>1.4</commons-codec.version>
+    <easymock.version>2.5.2</easymock.version>
+    <json-simle.version>1.1</json-simle.version>
+    <oauth.version>20090825</oauth.version>
+    <orgjson.version>20080701</orgjson.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  <scm>
+    <connection>https://svn.surfnet.nl/svn/coin-os/vendor/opensocial-java-client/trunk</connection>
+  </scm>
+  <distributionManagement>
+    <repository>
+      <id>coin-repo</id>
+      <name>coin-repo</name>
+      <url>http://bamboo-dev.coin.surfnetlabs.nl</url>
+    </repository>
+    <snapshotRepository>
+      <id>repo</id>
+      <name>Repository Name</name>
+      <url>http://bamboo-dev.coin.surfnetlabs.nl</url>
+    </snapshotRepository>
+  </distributionManagement>
+  <repositories>
+    <repository>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <id>coin-repo</id>
+      <name>COIN Repository</name>
+      <url>http://bamboo-dev.coin.surfnetlabs.nl</url>
+    </repository>
+    <repository>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <id>oauth-maven-repo</id>
+      <name>OAuth Maven repository</name>
+      <url>http://oauth.googlecode.com/svn/code/maven</url>
+      <layout>default</layout>
+    </repository>
+    <repository>
+      <id>maven2-repository.dev.java.net</id>
+      <name>Java.net Repository for Maven</name>
+      <url>http://download.java.net/maven/2</url>
+      <layout>default</layout>
+    </repository>
+  </repositories>
 
-	<build>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-source-plugin</artifactId>
-				<version>2.1.2</version>
-				<executions>
-					<execution>
-						<id>attach-sources</id>
-						<phase>verify</phase>
-						<goals>
-							<goal>jar-no-fork</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.1.2</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 
-		</plugins>
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-			<version>${commons-codec.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.google.code</groupId>
-			<artifactId>json-simple</artifactId>
-			<version>${json-simle.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>net.oauth</groupId>
-			<artifactId>oauth-core</artifactId>
-			<version>${oauth.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>${orgjson.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.easymock</groupId>
-			<artifactId>easymock</artifactId>
-			<version>${easymock.version}</version>
-		</dependency>
+    </plugins>
+  </build>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.8.1</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>${commons-codec.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>${json-simle.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>net.oauth</groupId>
+      <artifactId>oauth-core</artifactId>
+      <version>${oauth.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>${orgjson.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.easymock</groupId>
+      <artifactId>easymock</artifactId>
+      <version>${easymock.version}</version>
+      <scope>test</scope>
+    </dependency>
 
-	</dependencies>
+  </dependencies>
 </project>
