add scm provider

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <scm>
-    <connection>https://svn.surfnet.nl/svn/coin-os/vendor/opensocial-java-client/trunk</connection>
+    <connection>scm:svn:https://svn.surfnet.nl/svn/coin-os/vendor/opensocial-java-client/trunk</connection>
   </scm>
   <distributionManagement>
     <repository>
