--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.google.code</groupId>
   <artifactId>opensocial-java-client</artifactId>
-  <version>1.6.1-SNAPSHOT-coin</version>
+  <version>1.6.1-coin-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>opensocial-java-client</name>
   <description>opensocial-java-client</description>
